# PHProf

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: __init__.py  chat.py  cli.py  config.py  rag.py
configs/: dataset_config.yaml  lora_config.yaml  model_config.yaml  rag_config.yaml
data/raw/: examples_advanced.json  examples_seed.json
eval/: prompts_advanced_fr.jsonl  prompts_all_fr.jsonl  prompts_fr.jsonl  rubric.json
scripts/: build_dataset.py  build_index.py  download_docs.py  evaluate.py  export_gguf.py  syntax_check.py  train_lora.py  validate_dataset.py
tests/: __init__.py  test_config.py  test_rag.py
